# precis-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  server.json
.github/workflows/: release.yml
deploy/: .env.example  docker-compose.instance.yml  docker-compose.local.yml  docker-compose.yml
deploy/keycloak/: reconcile.py
docs/: README.md  llms.txt
docs/configuration/: adding-metrics-and-dimensions.md  catalogue-and-semantic.md  clickhouse-schema-contract.md  environment-variables.md
docs/deployment/: external-idp-recipes.md  oauth-keycloak.md  production-checklist.md
docs/excel/: functions.md  index.md
docs/getting-started/: quickstart.md
docs/operations/: upgrades.md
docs/reference/: mcp-tools.md
excel-addin/: .gitignore  README.md  SUPPORT.md  manifest.xml  package-lock.json  webpack.config.js
excel-addin/src/: config.ts  format.ts  mcp.ts  oauth.ts
excel-addin/src/auth-callback/: auth-callback.html  auth-callback.ts
excel-addin/src/commands/: commands.ts
excel-addin/src/functions/: block.ts  functions.ts
excel-addin/src/taskpane/: taskpane.css  taskpane.html  taskpane.ts
instance/catalogue/: gl_federated.yml  timesheets.yml  worklog_federated.yml
instance/semantic/views/: v_intercompany.sql  v_payroll.sql  v_revenue_subledger.sql  v_timesheets.sql
precis_mcp/: app_open.py  catalogue_sections.py  cell_format.py  concurrency.py  db.py  table_builder.py
precis_mcp/engine/: __init__.py  catalogue.py  context_validation.py  filter_resolver.py  ibis_retriever.py  inspect.py  resolver.py  retriever.py
precis_mcp/mcp_external/: discovery.py  excel_static.py  oauth_proxy.py  server.py
precis_mcp/sample_data/: generate.py
precis_mcp/tools/: read_tools.py
scripts/: deploy-mcp.sh
tests/: open_tests.txt
tests/component/: test_filter_resolver.py  test_read_tools.py
tests/unit/: test_catalogue.py  test_cell_format.py  test_retriever.py  test_table_builder.py
